QMOLEDEV/i3-4.1/i3-config-wizard/cfgparse.output
Grammar

    0 $accept: lines $end

    1 lines: /* empty */
    2      | lines "<whitespace>" bindcode
    3      | lines error
    4      | lines bindcode

    5 bindcode: TOKBINDCODE "<whitespace>" binding_modifiers "<number>" "<whitespace>" "<string>"

    6 binding_modifiers: /* empty */
    7                  | binding_modifier
    8                  | binding_modifiers '+' binding_modifier
    9                  | binding_modifiers '+'

   10 binding_modifier: "<modifier>"
   11                 | "$mod"
   12                 | "control"
   13                 | "shift"


Terminals, with rules where they appear

$end (0) 0
'+' (43) 8 9
error (256) 3
"<number>" (258) 5
"<string>" (259) 5
TOKBINDCODE (260) 5
"$mod" (261) 11
"<modifier>" (262) 10
"control" (263) 12
"shift" (264) 13
"<whitespace>" (265) 2 5


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
lines (13)
    on left: 1 2 3 4, on right: 0 2 3 4
bindcode (14)
    on left: 5, on right: 2 4
binding_modifiers (15)
    on left: 6 7 8 9, on right: 5 8 9
binding_modifier (16)
    on left: 10 11 12 13, on right: 7 8


state 0

    0 $accept: . lines $end

    $default  reduce using rule 1 (lines)

    lines  go to state 1


state 1

    0 $accept: lines . $end
    2 lines: lines . "<whitespace>" bindcode
    3      | lines . error
    4      | lines . bindcode

    $end            shift, and go to state 2
    error           shift, and go to state 3
    TOKBINDCODE     shift, and go to state 4
    "<whitespace>"  shift, and go to state 5

    bindcode  go to state 6


state 2

    0 $accept: lines $end .

    $default  accept


state 3

    3 lines: lines error .

    $default  reduce using rule 3 (lines)


state 4

    5 bindcode: TOKBINDCODE . "<whitespace>" binding_modifiers "<number>" "<whitespace>" "<string>"

    "<whitespace>"  shift, and go to state 7


state 5

    2 lines: lines "<whitespace>" . bindcode

    TOKBINDCODE  shift, and go to state 4

    bindcode  go to state 8


state 6

    4 lines: lines bindcode .

    $default  reduce using rule 4 (lines)


state 7

    5 bindcode: TOKBINDCODE "<whitespace>" . binding_modifiers "<number>" "<whitespace>" "<string>"

    "$mod"        shift, and go to state 9
    "<modifier>"  shift, and go to state 10
    "control"     shift, and go to state 11
    "shift"       shift, and go to state 12

    $default  reduce using rule 6 (binding_modifiers)

    binding_modifiers  go to state 13
    binding_modifier   go to state 14


state 8

    2 lines: lines "<whitespace>" bindcode .

    $default  reduce using rule 2 (lines)


state 9

   11 binding_modifier: "$mod" .

    $default  reduce using rule 11 (binding_modifier)


state 10

   10 binding_modifier: "<modifier>" .

    $default  reduce using rule 10 (binding_modifier)


state 11

   12 binding_modifier: "control" .

    $default  reduce using rule 12 (binding_modifier)


state 12

   13 binding_modifier: "shift" .

    $default  reduce using rule 13 (binding_modifier)


state 13

    5 bindcode: TOKBINDCODE "<whitespace>" binding_modifiers . "<number>" "<whitespace>" "<string>"
    8 binding_modifiers: binding_modifiers . '+' binding_modifier
    9                  | binding_modifiers . '+'

    "<number>"  shift, and go to state 15
    '+'         shift, and go to state 16


state 14

    7 binding_modifiers: binding_modifier .

    $default  reduce using rule 7 (binding_modifiers)


state 15

    5 bindcode: TOKBINDCODE "<whitespace>" binding_modifiers "<number>" . "<whitespace>" "<string>"

    "<whitespace>"  shift, and go to state 17


state 16

    8 binding_modifiers: binding_modifiers '+' . binding_modifier
    9                  | binding_modifiers '+' .

    "$mod"        shift, and go to state 9
    "<modifier>"  shift, and go to state 10
    "control"     shift, and go to state 11
    "shift"       shift, and go to state 12

    $default  reduce using rule 9 (binding_modifiers)

    binding_modifier  go to state 18


state 17

    5 bindcode: TOKBINDCODE "<whitespace>" binding_modifiers "<number>" "<whitespace>" . "<string>"

    "<string>"  shift, and go to state 19


state 18

    8 binding_modifiers: binding_modifiers '+' binding_modifier .

    $default  reduce using rule 8 (binding_modifiers)


state 19

    5 bindcode: TOKBINDCODE "<whitespace>" binding_modifiers "<number>" "<whitespace>" "<string>" .

    $default  reduce using rule 5 (bindcode)
